syntax = "proto3";

package dposv3;

import "github.com/loomnetwork/go-loom/types/types.proto";

message Params {
    uint64 validator_count = 1;
    int64 election_cycle_length = 2;
    Address coin_contract_address = 3;
    Address oracle_address = 4;
    BigUInt max_yearly_reward = 5;
    BigUInt registration_requirement = 6;
    BigUInt crash_slashing_percentage = 7;
    BigUInt byzantine_slashing_percentage = 8;
}

message State {
    Params params = 1;
    repeated Validator validators = 2;
    int64 last_election_time = 3;
    BigUInt total_validator_delegations = 4;
    BigUInt total_reward_distribution = 5;
}

message ValidatorStatistic {
    Address address = 1;
    bytes pub_key = 2;
    uint64 upblock_count = 3;
    uint64 block_count = 4;
    BigUInt slash_percentage = 5;
    BigUInt distribution_total = 6;
    BigUInt delegation_total = 7;
    BigUInt whitelist_amount = 8;
    uint64 whitelist_locktime = 9;
}

message ValidatorStatisticList {
    repeated ValidatorStatistic statistics = 1;
}

message Candidate {
    Address address = 1;
    bytes pub_key = 2;
    uint64 fee = 3;
    uint64 new_fee = 4;
    uint64 fee_delay_counter = 5;
    string name = 6;
    string description = 7;
    string website = 8;
}

message CandidateList {
    repeated Candidate candidates = 1;
}

message Delegation {
    Address validator = 1;
    Address delegator = 2;
    uint64 index = 3;
    BigUInt amount = 4;
    BigUInt update_amount = 5;
    uint64 lock_time = 6;
    enum LocktimeTier {
        TIER_ZERO = 0;
        TIER_ONE = 1;
        TIER_TWO = 2;
        TIER_THREE = 3;
    }
    LocktimeTier locktime_tier = 7;
    enum DelegationState {
        BONDING = 0;
        BONDED = 1;
        UNBONDING = 2;
        REDELEGATING = 3;
    }
    DelegationState state = 8;
    Address update_validator = 9;
}

message DelegationIndex {
    Address validator = 1;
    Address delegator = 2;
    uint64 index = 3;
}

message DelegationList {
    repeated DelegationIndex delegations = 1;
}

message Distribution {
    Address address = 1;
    BigUInt amount = 2;
}

message DistributionList {
    repeated Distribution distributions = 1;
}

message DPOSInitRequest {
    Params params = 1;
    repeated Validator validators = 2;
}

message DelegateRequest {
    Address validator_address = 1;
    BigUInt amount = 2;
    uint64 locktime_tier = 3;
}

message RedelegateRequest {
    Address validator_address = 1;
    Address former_validator_address = 2;
    uint64 index = 3;
    BigUInt amount = 4;
    uint64 new_locktime_tier = 5;
}

message ConsolidateDelegationsRequest {
    Address validator_address = 1;
}

message UnbondRequest {
    Address validator_address = 1;
    BigUInt amount = 2;
    uint64 index = 3;
}

message WhitelistCandidateRequest {
    Address candidate_address = 1;
    BigUInt amount = 2;
    uint64 lock_time = 3;
}

message RemoveWhitelistedCandidateRequest {
    Address candidate_address = 1;
}

message ChangeWhitelistAmountRequest {
    Address candidate_address = 1;
    BigUInt amount = 2;
}

message CheckDelegationRequest {
    Address validator_address = 1;
    Address delegator_address = 2;
}

message CheckDelegationResponse {
    BigUInt amount = 1;
    BigUInt weighted_amount = 2;
    repeated Delegation delegations = 3;
}

message CheckRewardsRequest {
}

message CheckRewardsResponse {
    BigUInt total_reward_distribution = 1;
}

message TotalDelegationRequest {
    Address delegator_address = 1;
}

message TotalDelegationResponse {
    BigUInt amount = 1;
    BigUInt weighted_amount = 2;
}

message CheckAllDelegationsRequest {
    Address delegator_address = 1;
}

message CheckAllDelegationsResponse {
    BigUInt amount = 1;
    BigUInt weighted_amount = 2;
    repeated Delegation delegations = 3;
}

message CheckDistributionRequest {
}

message CheckDistributionResponse {
    BigUInt amount = 1;
}

message ClaimDistributionRequest {
    Address withdrawal_address = 1;
}

message ClaimDistributionResponse {
    BigUInt amount = 1;
}

message RegisterCandidateRequest {
    bytes pub_key = 1;
    uint64 fee = 2;
    string name = 3;
    string description = 4;
    string website = 5;
    uint64 locktime_tier = 6;
}

message ChangeCandidateFeeRequest {
    uint64 fee = 1;
}

message UpdateCandidateInfoRequest {
    string name = 1;
    string description = 2;
    string website = 3;
}

message UnregisterCandidateRequest {
}

message TimeUntilElectionRequest {
}

message TimeUntilElectionResponse {
    int64 time_until_election = 1;
}

message ListValidatorsRequest {
}

message ListValidatorsResponse {
    repeated ValidatorStatistic statistics = 1;
}

message ListCandidateRequest {
}

message ListCandidateResponse {
    repeated Candidate candidates = 1;
}

message ListDelegationsRequest {
    Address candidate = 1;
}

message ListDelegationsResponse {
    repeated Delegation delegations = 1;
    BigUInt delegation_total = 2;
}

message ListAllDelegationsRequest {
}

message ListAllDelegationsResponse {
    repeated ListDelegationsResponse list_responses = 1;
}

// Oracle request batch
message BatchRequest {
    oneof payload {
        WhitelistCandidateRequest whitelist_candidate = 1;
    }
    BatchRequestMeta meta = 2;
}

message BatchRequestMeta {
    uint64 block_number = 1;
    uint64 tx_index = 2;
    uint64 log_index = 3;
}

message RequestBatchTally {
    uint64 last_seen_block_number = 1;
    uint64 last_seen_tx_index = 2;
    uint64 last_seen_log_index = 3;
}

message RequestBatch {
    repeated BatchRequest batch = 1;
}

message GetRequestBatchTallyRequest {
}

message SetElectionCycleRequest {
    int64 election_cycle = 1;
}

message SetMaxYearlyRewardRequest {
    BigUInt max_yearly_reward = 1;
}

message SetRegistrationRequirementRequest {
    BigUInt registration_requirement = 1;
}

message SetValidatorCountRequest {
    int64 validator_count = 1;
}

message SetOracleAddressRequest {
    Address oracle_address = 1;
}

message SetSlashingPercentagesRequest {
    BigUInt crash_slashing_percentage = 1;
    BigUInt byzantine_slashing_percentage = 2;
}

message GetStateRequest {
}

message GetStateResponse {
    State state = 1;
}

// EVENTS

message DposElectionEvent {
    uint64 block_number = 1;
}

message DposSlashEvent {
    Address validator = 1;
    BigUInt slash_percentage = 2;
}

message DposCandidateRegistersEvent {
    Address address = 1;
    uint64 fee = 2;
}

message DposCandidateUnregistersEvent {
    Address address = 1;
}

message DposCandidateFeeChangeEvent {
    Address address = 1;
    uint64 new_fee = 2;
}

message DposUpdateCandidateInfoEvent {
    Address address = 1;
}

message DposDelegatorDelegatesEvent {
    Address address = 1;
    BigUInt amount = 2;
}

message DposDelegatorRedelegatesEvent {
    Address address = 1;
    BigUInt amount = 2;
}

message DposDelegatorConsolidatesEvent {
    Address address = 1;
    Address validator = 2;
}

message DposDelegatorUnbondsEvent {
    Address address = 1;
    BigUInt amount = 2;
}
